Auth system v1. Still unstable
