# controllers/v1/refresh.go
@@ -1,23 +1,24 @@
 package v1
 
 import (
-	serviceV1 "github.com/buonotti/bus-stats-api/services/v1"
 	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
+// RefreshUserToken godoc
+// @Summary Refresh token
+// @Schemes serviceV1.RefreshRequest serviceV1.RefreshResponse services.ErrorResponse
+// @Description Refreshes a user token identified by the given id
+// @ID refresh-token
+// @Security ApiKeyAuth
+// @Tags authentication
+// @Accept application/json
+// @Produce application/json
+// @param Authorization header string true "Authorization"
+// @Success 200 {object} v1.RefreshResponse
+// @Failure 400 {object} services.ErrorResponse
+// @Failure 401 {object} services.ErrorResponse
+// @Failure 500 {object} services.ErrorResponse
+// @Router /refresh [post]
 func RefreshUserToken(c *gin.Context) {
-	var request serviceV1.RefreshRequest
-
-	if err := c.ShouldBindJSON(&request); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	newToken, err := serviceV1.RefreshToken(request)
-	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
-	}
-
-	c.JSON(http.StatusOK, newToken)
+	// Handled by library, only here for docs. Check ./root.go
 }
